--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,30 @@ body {
   margin: 0
 }
 
+nav li {
+  display: block;
+  float: left;
+  width: 33.333333%;
+  list-style-type: none;
+}
+
+nav a {
+  display: block;
+  border-top: 1px solid black;
+  border-left: 1px solid black;
+  margin: 0;
+  padding: 0.5em 0.5em 0.5em 0.5em;
+  color: white;
+  background-color: brown;
+  text-decoration: none;
+}
+
+nav ol {
+  overflow: hidden;
+  padding: 0;
+  width: 100%;
+}
+
 h1 {
 
 }
@@ -24,13 +48,12 @@ h3 {
 
 h4 {
   float: left;
-  display: inline-block;
+  display: block;
 }
 
 .test {
   float: right;
-  display: inline-block;
-  clear: left;
+  display: block;
 }
 
 .info {
