trying to make my boxes

--- a/css/main.css
+++ b/css/main.css
@@ -138,6 +138,17 @@ h3 {
   text-align: center;
 }
 
+.enter {
+  background-color: #894C22;
+  border: 1px solid black;
+}
+
+.enter-2 {
+  background-color: #894C22;
+  border: 1px solid black;
+  padding: 0em, 0em, 5em, 0em;
+}
+
 em {
   font-weight: bold;
 }
