--- a/css/main.css
+++ b/css/main.css
@@ -146,7 +146,7 @@ h3 {
 .enter-2 {
   background-color: #894C22;
   border: 1px solid black;
-  padding: 0em, 0em, 5em, 0em;
+  padding-bottom: 7em;
 }
 
 em {
