--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@ body {
   margin: 0;
   min-height: 100vh;
   padding-bottom: 44px;
+  line-height: 1.5;
 }
 
 p {
@@ -43,7 +44,7 @@ h1 {
 
 header {
   background-color: #754C29;
-  padding: 1em, 0em, 0em, 0em;
+  padding: 1em 0em 0em 0em;
 }
 
 nav li {
@@ -98,9 +99,10 @@ h2 {
 
 h3 {
   text-align: center;
-  margin: 1;
+  margin: .5em;
   font-size: 1.5rem;
   font-family: 'Dancing Script', cursive;
+  color: #822707;
 }
 
 .all {
@@ -156,10 +158,14 @@ em {
 dd {
   margin: 0;
   text-align: center;
+  font-family: arial;
+  color: #684F3E;
 }
 
 dt {
   text-align: center;
+  font-family: arial;
+  color: #592D15;
 }
 
 footer {
