--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,7 @@ h1 {
   font-size: 2.5rem;
   font-family: 'Dancing Script', cursive;
   margin: 0;
+  text-shadow: 0 2px 3px rgba(0,0,0,0.8);
 }
 
 header {
@@ -60,7 +61,7 @@ nav a {
   border-top: 1px solid black;
   border-left: 1px solid black;
   margin: 0;
-  padding: 0.4em 0.4em 0.4em 0.4em;
+  padding: 0.6em 0.3em 0.6em 0.3em;
   color: white;
   background-color: #B78A4B;
   text-decoration: none;
